# tdiagrams

./: .gitignore  README.md  Setup.lhs  stack.yaml  tdiagrams.cabal
doc/: TDiagramTypes.agda
